<resources>
    <string name="map_api_key">AIzaSyDeqDY9as9sK9sY9W8faHy7iVr-_9StJTE</string>
    <string name="app_name">Monaspaty</string>
    <string name="login">Sign in</string>
    <string name="username">Phone number or email</string>
    <string name="password_login">Password</string>
    <string name="or">or</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="name">Name</string>
    <string name="something_error">Error :something went haywire try again later.</string>
    <string name="profile">PROFILE</string>
    <string name="reserv">RESERVATIONS</string>
    <string name="home">HOME</string>
    <string name="more">MORE</string>
    <string name="sign_in_or_create_a_new_account_to_view_your_reservations">Sign in or create a new account to view your reservations.</string>
    <string name="close">Close</string>
    <string name="notification">Notifications</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="bnk">Bank accounts</string>
    <string name="contact">Contact us</string>
    <string name="complains">Complains</string>
    <string name="technical_support">Technical support</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="whatsapp">whatsapp</string>
    <string name="pls_install_wapp">Please install whatsApp.</string>
    <string name="gmail">Gmail</string>
    <string name="wait">Wait...</string>
    <string name="sending">Sending...</string>
    <string name="send_succ">Successfully sent.</string>
    <string name="name_req">Name is required</string>
    <string name="email_req">Email is required</string>
    <string name="inv_email">Invalid email</string>
    <string name="subject_req">Subject is required</string>
    <string name="msg_req">Message is required</string>
    <string name="phone_email_req">Phone number or email is required</string>
    <string name="password_req">Password is required</string>
    <string name="phone_req">Phone number is required</string>
    <string name="inv_phone">Invalid Phone number</string>
    <string name="city_req">City is required</string>
    <string name="pass_short">Password is to short minimum 5 characters</string>
    <string name="account_name">Account Name</string>
    <string name="account_IBAN">Account IBAN</string>
    <string name="account_bank_name">Bank Name</string>
    <string name="account_number">Account Number</string>
    <string name="phone_email_reg_before">Email or phone number are exist.</string>
    <string name="exit">Exit</string>
    <string name="logout">Logout</string>
    <string name="logout2">Logout...</string>
    <string name="search">Search by date...</string>
    <string name="reserve">reserve</string>
    <string name="profile2">Profile</string>
    <string name="photos">Photos</string>
    <string name="date">Date</string>
    <string name="date_old">date is old</string>
    <string name="filter_by">Filter by</string>
    <string name="price">Price</string>
    <string name="nearby">nearby</string>
    <string name="clear_filter">no filter</string>
    <string name="accept">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="reg_succ">Sign Up successfully</string>
    <string name="si_su">Please Sign in or Sign Up.</string>
    <string name="des_date">Select Desired Date</string>
    <string name="date_reserve">Sorry, booking can not be made. This time is currently unavailable</string>
    <string name="book_succ">Booking successful</string>
    <string name="booking">Booking...</string>
    <string name="sar">SAR</string>
    <string name="add_date">ADD</string>
    <string name="upd">Update</string>
    <string name="cancel_reserve">Cancel</string>
    <string name="cancel_succ">Booking canceled successfully</string>
    <string name="canc_booking">Canceling booking...</string>
    <string name="book_upd_succ">Booking updated successfully</string>
    <string name="updating_booking_date">Updating booking date...</string>
    <string name="trans_mon">transfer</string>
    <string name="uodate2">Update</string>
    <string name="trans">Transformation</string>
    <string name="money_of_transfer">Money of transfer</string>
    <string name="upload_image">Upload Transfer Image</string>
    <string name="trns">Transfer</string>
    <string name="tran_mon_req">money of transfer is required</string>
    <string name="booked">Booked</string>
    <string name="no_reserv">There are no reservations to display</string>
    <string name="sign_inn">Sign in...</string>
    <string name="upd_name">Update name</string>
    <string name="upd_phone">Update phone</string>
    <string name="upd_email">Update email</string>
    <string name="upd_password">Update password</string>
    <string name="newpass_req">New password is required</string>
    <string name="uptng_name">Updating name...</string>
    <string name="uptng_phone">Updating phone number...</string>
    <string name="uptng_email">Updating email...</string>
    <string name="updtng_pass">Updating password...</string>
    <string name="upd_succ">Updated successfully</string>
    <string name="wrong_oldpass">the old password is incorrect</string>
    <string name="no_not">There are not notifications to display</string>
    <string name="res_accept">Reservation accepted</string>
    <string name="resv_cancel">Reservation declined</string>
    <string name="ph_em_exist">phone or email are exist</string>
    <string name="estrahat">Lounges</string>
    <string name="shalehat">Chalets</string>
    <string name="kosor_afrah">Palaces</string>
    <string name="new_pass">New Password</string>
    <string name="old_pass">Old Password</string>

</resources>
