<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray0"
    android:orientation="vertical"
    >
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/tv_terms_condition"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/terms"
                android:layout_marginBottom="1dp"
                />
            <TextView
                android:id="@+id/tv_bank"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/bnk"
                android:layout_marginBottom="1dp"

                />

            <TextView
                android:id="@+id/tv_contact"

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/contact"
                android:layout_marginBottom="1dp"

                />
           
            <TextView
                android:id="@+id/tv_support"

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/technical_support"
                android:layout_marginBottom="1dp"

                />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>