<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/gray1"
    app:cardCornerRadius="10dp"
    app:contentPadding="2dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="15sp"
            android:text="@string/notification"
            android:textStyle="bold"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/sign_in_or_create_a_new_account_to_view_your_reservations"
            android:layout_marginBottom="20dp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            >
            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:textColor="@color/white"
                android:background="@color/transparent"
                android:text="@string/login"
                android:textSize="12sp"

                />
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:layout_marginLeft="2dp"

                android:background="@color/white"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_gravity="center_vertical"/>
            <Button
                android:id="@+id/btn_reg"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:textColor="@color/white"
                android:background="@color/transparent"
                android:text="@string/sign_up"
                android:textSize="12sp"

                />
            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginRight="2dp"
                android:layout_marginLeft="2dp"
                android:background="@color/white"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_gravity="center_vertical"/>
            <Button
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:textColor="@color/white"
                android:background="@color/transparent"
                android:text="@string/close"
                android:textSize="12sp"
                />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>