<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    android:background="@drawable/background"
    xmlns:android="http://schemas.android.com/apk/res/android">



    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:src="@drawable/logo"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textColor="@color/color"
            android:textSize="20sp"
            android:text="استراحات المملكة"
            android:layout_marginBottom="70dp"
            />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ed_bg"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                android:hint="@string/username"
                android:textColorHint="@color/white"
                android:paddingTop="8dp"


                >
                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:textSize="13sp"
                    android:textColor="@color/white"
                    android:drawableStart="@drawable/user_name_icon"
                    android:singleLine="true"
                    android:drawablePadding="5dp"
                    android:background="@color/transparent"
                    android:inputType="textEmailAddress"
                    android:gravity="center_vertical"
                    />
            </android.support.design.widget.TextInputLayout>
            <com.lamudi.phonefield.PhoneInputLayout
                android:id="@+id/edt_check_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                >

            </com.lamudi.phonefield.PhoneInputLayout>
        </FrameLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ed_bg"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            android:hint="@string/password_login"
            android:textColorHint="@color/white"
            android:layout_marginTop="5dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white"
            android:paddingTop="8dp"

            >
            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:drawableStart="@drawable/password_icon"
                android:singleLine="true"
                android:inputType="textPassword"
                android:drawablePadding="5dp"
                android:background="@color/transparent"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/login_btn"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:text="@string/login"
            android:textSize="15sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/or"
            />

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/sign_up"
            />
    </LinearLayout>

</ScrollView>