<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearresponse"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/ed_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1.5"
            android:background="@drawable/login_btn"
            android:gravity="center"
            android:paddingRight="5dp"
            android:text="@string/account_name"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_account_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:background="@drawable/edt_contact"
            android:gravity="center_vertical"
            android:paddingRight="5dp"
            android:textColor="@drawable/login_btn"
            android:textSize="14sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView

            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1.5"
            android:background="@drawable/login_btn"
            android:gravity="center"
            android:paddingRight="5dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:text="@string/account_IBAN"
            />

        <TextView
            android:id="@+id/txt_account_IBAN"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:background="@drawable/edt_contact"
            android:gravity="center_vertical"
            android:paddingRight="5dp"
            android:textColor="@drawable/login_btn"
            android:textSize="14sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"

        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1.5"
            android:background="@drawable/login_btn"
            android:gravity="center"
            android:paddingRight="5dp"
            android:text="@string/account_bank_name"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_account_bank_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:background="@drawable/edt_contact"
            android:gravity="center"
            android:paddingRight="5dp"
            android:textColor="@drawable/login_btn"
            android:textSize="14sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1.5"
            android:background="@drawable/login_btn"
            android:gravity="center"
            android:paddingRight="5dp"
            android:text="@string/account_number"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_account_number"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:background="@drawable/edt_contact"
            android:gravity="center_vertical"
            android:paddingRight="5dp"
            android:textColor="@drawable/login_btn"
            android:textSize="14sp" />


    </LinearLayout>


</LinearLayout>