<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray0"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginBottom="8dp"
        >
        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/filter"
            android:padding="11dp"
            android:layout_margin="5dp"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:text="@string/filter_by"
            android:textStyle="bold"
            android:textAllCaps="true"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginBottom="2dp"
        android:descendantFocusability="blocksDescendants"
        >
        <RadioButton
            android:id="@+id/rb_price"
            android:layout_width="35dp"
            android:layout_height="45dp"
            android:src="@drawable/filter"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="15dp"
            android:button="@drawable/rb_bg"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:text="@string/price"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_gravity="center_vertical"
            android:clickable="false"
            android:longClickable="false"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_nearby"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginBottom="2dp"
        android:descendantFocusability="blocksDescendants"

        >
        <RadioButton
            android:id="@+id/rb_nearby"

            android:layout_width="35dp"
            android:layout_height="45dp"
            android:src="@drawable/filter"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="15dp"
            android:button="@drawable/rb_bg"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:text="@string/nearby"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_gravity="center_vertical"
            android:clickable="false"
            android:longClickable="false"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_nofilter"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_marginBottom="2dp"
        android:descendantFocusability="blocksDescendants"

        >
        <RadioButton
            android:id="@+id/rb_nofilter"

            android:layout_width="35dp"
            android:layout_height="45dp"
            android:src="@drawable/filter"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="15dp"
            android:button="@drawable/rb_bg"
            android:checked="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:text="@string/clear_filter"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_gravity="center_vertical"
            android:clickable="false"
            android:longClickable="false"
            />

    </LinearLayout>


</LinearLayout>